# generative-ai-for-beginners

./: .env  .env.copy  .eslintrc.json  .gitignore  .gitmodules  .mergify.yml  .prettierrc  .python-version  AGENTS.md  Author Jim Bound  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Hi  LICENSE  README.md  README.zh-cn.md  SECURITY.md  SUPPORT.md  TRANSLATIONS.md  TecladoVirtual.py  Test123  Test1233333333333333333  _gen_lesson09_images.py  _heikes_notes  `}); console.log('123') ; console.log({a:`.md  `}); console.log('pwn') ; console.log({a:`.md  `}); console.log('trial123') ; console.log({a:`.md  `}); console.log('trial1234') ; console.log({a:`.md  asdfjkl;asdf  claims-ai-demo.py  docsifytopdf.js  environment.yml  for-teachers.md  how 22a488OBe  html.ဖြိုးပြည့်စုံ  index.html  insurance-ai-usecases.md  main.py  myref  (+10 more)
.devcontainer/: Setup.txt  devcontainer.json  eko-devcontainer.json  ekosystém-devcontainer.json  environment.yml  post-create.sh
.github/: PG  dependabot.yml  markdown_checker.py
00-course-setup/: 01-setup-cloud.md  02-setup-local.md  03-providers.md  README.md  SETUP.md  load_environment.py
01-introduction-to-genai/: Assignment - Start-up Idea.md  Assignment-01-introduction-to-genai  Business Idea.docx  README.md  notes.md
02-exploring-and-comparing-different-llms/: README.md  notes.md  test_RAG.py
03-using-generative-ai-responsibly/: README.MD  README.md
03-using-generative-ai-responsibly /: README.MD
04-prompt-engineering-fundamentals/: 1-introduction-azure-openai.ipynb  1-introduction.ipynb  README.md  SETUP.md  aoai-assignment.ipynb
05-advanced-prompts/: README.md  assignment.py
06-text-generation-apps/: README.md  app-recipe.py  app.py  app2.py  history-bot.py  notebook-azure-openai.ipynb  python-tips.py  quickstart.py  study-buddy.py
07-building-chat-applications/: README.md  chat.py  notebook-azure-openai.ipynb  notebook-openai.ipynb  notebook-simple-azure-openai.ipynb
08-building-search-applications/: README.md  example.md  notebook-azure-openai-simple.ipynb  solution.ipynb
09-building-image-applications/: README.md  app-variation.py  app.py  notebook-azureopenai.ipynb  requirements.txt
1-getting-started/: README.md
10-building-low-code-ai-applications/: README.md  assignment.md
11 - Integrating External Applications with Function Calling /: Lesson 11 - Function Calling.ipynb
11 - intergating-with-function-calling /: README.md
11-integrating-with-function-calling/: Lesson11-FunctionCalling.ipynb  README.md  aoai-assignment.ipynb
11-intergating-with-function-calling/: Lesson11-FunctionCalling.ipynb  README.md
11-intergating-with-function-calling /: README.md
12-designing-ux-for-ai-applications/: README.md
13 - contiuned-learning/: README.md
13-continued-learning/: README.md
13-securing-ai-applications/: README.md
14-the-generative-ai-application-lifecycle/: README.md
15-rag-and-vector-databases/: Lesson15-rag-vector-databases.ipynb  README.md  notebook-rag-vector-databases.ipynb  practice.ipynb  requirements.txt
16-open-source-models/: README.MD  README.md
17-ai-agents/: README.md
18-fine-tuning/: README.md  RESOURCES.md  SETUP.md
19-slm/: README.md
2-exploring-and-comparing-different-llms/: README.md
20-mistral/: README.md
21-meta/: README.md
4-prompt-engineering-fundamentals/: 1-introduction.ipynb  4.0-introduction.md  4.1-what-is-prompt-engineering.md  4.2-prompt-design-by-example.md  (+4 more)
(+4678 files in other folders)
