[tool.poetry]
name = "genaienv"
version = "0.1.0"
description = "Gen AI Course Python env"
authors = ["Sean Glynn <seanglynn06@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.5"
python-dotenv = "^1.0.0"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
